# internal/dto/concierge_dto.go
@@ -5,42 +5,29 @@ import (
 	"time"
 )
 
-// --- Concierge Request DTOs ---
+type UpdateConciergeDTO = CreateConciergeDTO
 
-// CreateConciergeDTO represents the request payload for creating a concierge.
 type CreateConciergeDTO struct {
 	Name        string `json:"name" binding:"required"`
 	Description string `json:"description" binding:"required"`
 }
 
-// Trim trims leading and trailing whitespace from string fields in CreateConciergeDTO.
 func (d *CreateConciergeDTO) Trim() {
 	d.Name = strings.TrimSpace(d.Name)
 	d.Description = strings.TrimSpace(d.Description)
 }
 
-// --- Concierge Response DTOs ---
-
-// ConciergeSummaryResponseDTO represents a summary of a concierge without agent IDs.
-// Used for listing concierges.
-type ConciergeSummaryResponseDTO struct {
-	ID          string    `json:"id"`
-	Name        string    `json:"name"`
-	Description string    `json:"description"`
-	Version     int       `json:"version"`
-	ETagVersion int       `json:"-"`
-	CreatedAt   time.Time `json:"createdAt"`
-	UpdatedAt   time.Time `json:"updatedAt"`
+type ConciergeVersionDescriptorDTO struct {
+	ConciergeVersionID string `json:"conciergeVersionId"`
+	Version            int    `json:"version"`
 }
-
-// ConciergeResponseDTO represents a concierge returned in HTTP responses.
 type ConciergeResponseDTO struct {
-	ID          string                    `json:"id"`
-	Name        string                    `json:"name"`
-	Description string                    `json:"description"`
-	Agents      []AgentSummaryResponseDTO `json:"agents"`
-	Version     int                       `json:"version"`
-	ETagVersion int                       `json:"-"`
-	CreatedAt   time.Time                 `json:"createdAt"`
-	UpdatedAt   time.Time                 `json:"updatedAt"`
+	ID                string                          `json:"id"`
+	Name              string                          `json:"name"`
+	Description       string                          `json:"description"`
+	ConciergeVersions []ConciergeVersionDescriptorDTO `json:"conciergeVersions"`
+	Version           int                             `json:"-"`
+	CreatedAt         time.Time                       `json:"createdAt"`
+	UpdatedAt         time.Time                       `json:"updatedAt"`
 }
+type ConciergeSummaryResponseDTO = ConciergeResponseDTO
